--- a/Covalyzer/App.config
+++ b/Covalyzer/App.config
@@ -19,5 +19,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="CovalyzerDBSettings" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=Covalyzer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CCModel" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=Covalyzer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
