--- a/CovaVSProj/App.config
+++ b/CovaVSProj/App.config
@@ -18,7 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="CovalyzerEntities" connectionString="metadata=res://*/Covalyzer_model.csdl|res://*/Covalyzer_model.ssdl|res://*/Covalyzer_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-J042E16\SQLEXPRESS01;initial catalog=Covalyzer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="CovalyzerEntities" connectionString="metadata=res://*/Covalyzer_model.csdl|res://*/Covalyzer_model.ssdl|res://*/Covalyzer_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=Covalyzer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CovalyzerEntities" connectionString="metadata=res://*/Covalyzer_model.csdl|res://*/Covalyzer_model.ssdl|res://*/Covalyzer_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-J042E16\SQLEXPRESS01;initial catalog=Covalyzer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CovalyzerEntities1" connectionString="metadata=res://*/Covalyzer_model.csdl|res://*/Covalyzer_model.ssdl|res://*/Covalyzer_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=Covalyzer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
